--- a/blog.html
+++ b/blog.html
@@ -117,7 +117,7 @@
             <h1> CEC Promotional Video </h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/f8CuMi0csnE?si=1ji3ZVLI8oY7jhc_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
         </main>
-        <button class="back"><a href="personalportfolio.html">BACK TO HOMEPAGE<a></button>
+        <button class="back"><a href="index.html">BACK TO HOMEPAGE<a></button>
          <footer>
             <p>Copyright &copy; 2025, JOM. </p> 
         </footer>
